mopidy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mopidy
  labels:
    app: mopidy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mopidy
  template:
    metadata:
      labels:
        app: mopidy
    spec:
      containers:
      - name: mopidy
        image: jaedb/iris:latest
        ports:
        - containerPort: 6680
          name: mopidy
        livenessProbe:
          httpGet:
            path: /iris/
            port: mopidy
        readinessProbe:
          httpGet:
            path: /iris/
            port: mopidy
        volumeMounts:
        - name: config
          mountPath: /config/mopidy.conf
          subPath: mopidy.conf
      volumes:
      - name: config
        configMap:
          name: mopidy-config
