icecast-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: icecast
  labels:
    app: icecast
spec:
  ports:
  - port: 8000
    targetPort: icecast
    protocol: TCP
    name: icecast
  selector:
    app: icecast
