ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mopidy
  labels:
    app: mopidy
  annotations:
    ingress.kubernetes.io/force-hsts: "true"
    ingress.kubernetes.io/hsts-max-age: "315360000"
    ingress.kubernetes.io/hsts-preload: "true"
    ingress.kubernetes.io/ssl-redirect: "true"
    ingress.kubernetes.io/hsts-include-subdomains: "true"
    ingress.kubernetes.io/auth-type: basic
    ingress.kubernetes.io/auth-secret: mopidy
spec:
  rules:
  - host: radio.mydomain.com
    http:
      paths:
      - path: /
        backend:
          serviceName: mopidy
          servicePort: mopidy
      - path: /listen
        backend:
          serviceName: icecast
          servicePort: icecast
